nginxapp/nginxdeplopy.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-1
  labels:
    run: my-nginx-1
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    protocol: TCP
    name: https
  selector:
    run: my-nginx-1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx-1
spec:
  selector:
    matchLabels:
      run: my-nginx-1
  replicas: 2
  template:
    metadata:
      labels:
        run: my-nginx-1
    spec:
      volumes:
      - name: secret-volume
        secret:
          secretName: nginxsecret
      containers:
      - name: nginxhttps
        image: bprashanth/nginxhttps:1.0
        ports:
        - containerPort: 443
        - containerPort: 80
        volumeMounts:
        - mountPath: /etc/nginx/ssl
          name: secret-volume
